fix: adding title text overflow

--- a/src/components/product/product.module.scss
+++ b/src/components/product/product.module.scss
@@ -25,6 +25,9 @@
     font-size: 0.875rem;
     margin: 0;
     font-weight: 100;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
   :global .price-container {
